<resources>
    <string name="app_name">493Balanin_Lab7_CommunalApp</string>

    <string name="tvAuthorization">Authorization</string>
    <string name="tvLogin">Login:</string>
    <string name="tvPassword">Password:</string>

    <string name="btnLogin">Sign in</string>
    <string name="btnRegister">Sign up</string>
    <string name="btnBack">Back</string>
    <string name="checkRememberMe">Remember me</string>
    <string name="tvRegisterActivity">Registration</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>