<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".activities.AuthorizationActivity">

    <TextView
        android:id="@+id/tv_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvAuthorization"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvLogin"
            android:textColor="@color/purple_200" />

        <EditText
            android:id="@+id/et_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="@color/purple_200" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvPassword"
            android:textColor="@color/purple_200" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="@color/purple_200" />

    </LinearLayout>

    <CheckBox
        android:id="@+id/checkRememberMe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/checkRememberMe" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_LoginAccount"
            android:layout_width="150dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="OnButtonSignIn_Click"
            android:text="@string/btnLogin" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGoRegister"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/btnRegister" />


</LinearLayout>